truly fixed centering without overflow-x hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-body {
-  overflow-x: hidden;
-}
 .container {
   display: flex;
   flex-direction: column;
@@ -12,7 +9,8 @@ body {
   margin: 0 auto;
 }
 header {
-  padding: 2vh;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
   height: 8%;
   position: -webkit-sticky;
   position: sticky;
